@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2024 bakdata
+ * Copyright (c) 2025 bakdata
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -30,7 +30,6 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.StringJoiner;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -43,7 +42,7 @@ import java.util.stream.Stream;
  * final String[] environmentArguments = new EnvironmentArgumentsParser(ENV_PREFIX).parseVariables(System.getenv());
  * }</pre>
  * The class collects all environment variables starting with {@link #environmentPrefix} and replaces the
- * {@link #environmentDelimiter} with the {@link #commandLineDelimiter}. Furthermore it transforms all words to
+ * {@link #environmentDelimiter} with the {@link #commandLineDelimiter}. Furthermore, it transforms all words to
  * lowercase and prepends "--" to match the command line argument descriptors.
  * <p>Example:</p>
  * {@code var ENV_PREFIX = "APP_"; Transformation: APP_INPUT_TOPIC --> --input-topic }
@@ -92,7 +91,7 @@ public class EnvironmentArgumentsParser {
         return environment.entrySet().stream()
                 .filter(e -> e.getKey().startsWith(this.environmentPrefix))
                 .flatMap(this::convertEnvironmentVariable)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
